ingress-gcloud.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: jenkins
        type: webserver
    spec:
      containers:
      - name: jenkins
        image: buldozer232/jenkins-alpine
        ports:
        - containerPort: 8080
          name: http-server
